[package]
name = "noobdoor"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
chacha20 = "0.9.1"
curve25519-dalek = "4.1.3"
rand = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
sha2 = "0.9.8"

